Fixed toolbar alignment when strucutre maps are closed

--- a/static/css/app.css
+++ b/static/css/app.css
@@ -115,10 +115,6 @@ body.dark-mode {
 .toolbar-actions > .primary-action { grid-column: 5; margin-left: 5px; }
 .toolbar-actions > .toolbar-menu-wrapper { grid-column: 6; padding-left: 8px; }
 
-body.hide-maps .toolbar {
-  grid-template-columns: minmax(140px, .8fr) 90px minmax(180px, 1.35fr) minmax(180px, 1.35fr) 70px auto;
-}
-
 body.single-view .toolbar {
   grid-template-columns: minmax(140px, .8fr) 90px minmax(300px, 2.7fr) 70px auto;
 }
@@ -126,52 +122,6 @@ body.single-view .toolbar {
 body.single-view .left-page-selection { grid-column: 3; padding-right: 5px; }
 body.single-view .toolbar-actions > .primary-action { grid-column: 4; }
 body.single-view .toolbar-actions > .toolbar-menu-wrapper { grid-column: 5; }
-
-body.url-input-env .toolbar {
-  grid-template-columns: minmax(150px, .75fr) 90px minmax(230px, 1.5fr) minmax(230px, 1.5fr) 70px auto;
-}
-
-/* Canada.ca should match the standard toolbar layout but with the environment
-   selector spanning two columns (the empty year/Folder slot). */
-body.url-input-env.canada-ca-env .toolbar {
-  grid-template-columns:
-    max(0px, calc(var(--left-map-width) - 104px))
-    90px
-    var(--left-page-width)
-    var(--right-page-width)
-    70px
-    max(0px, calc(var(--right-map-width) - 84px));
-}
-
-/* Canada.ca layout will be overridden for URL-input mode below */
-
-body.url-input-env .left-page-selection { grid-column: 2; }
-body.url-input-env .right-page-selection { grid-column: 3; }
-body.url-input-env .toolbar-actions > .primary-action { grid-column: 4; }
-body.url-input-env .toolbar-actions > .toolbar-menu-wrapper { grid-column: 5; }
-
-/* Canada.ca in URL-input mode: env select spans two columns, keep other
-   controls aligned the same as other environments. This selector is placed
-   after the generic URL-input rules so it takes precedence. */
-body.url-input-env.canada-ca-env .toolbar-source-controls #envSelectGroup {
-  grid-column: 1 / 3;
-  min-width: 0;
-  padding-right: 5px;
-}
-
-body.url-input-env.canada-ca-env .toolbar-source-controls #yearSelectGroup {
-  display: none;
-}
-
-body.url-input-env.canada-ca-env .left-page-selection { grid-column: 3; }
-body.url-input-env.canada-ca-env .right-page-selection { grid-column: 4; }
-body.url-input-env.canada-ca-env .toolbar-actions > .primary-action { grid-column: 5; }
-body.url-input-env.canada-ca-env .toolbar-actions > .toolbar-menu-wrapper { grid-column: 6; }
-
-body.single-view.url-input-env .toolbar { grid-template-columns: minmax(150px, .75fr) minmax(320px, 3fr) 70px auto; }
-body.single-view.url-input-env .left-page-selection { grid-column: 2; }
-body.single-view.url-input-env .toolbar-actions > .primary-action { grid-column: 3; }
-body.single-view.url-input-env .toolbar-actions > .toolbar-menu-wrapper { grid-column: 4; }
 
 .toolbar label {
   display: block;
@@ -963,9 +913,12 @@ body.is-resizing-diff .drag-cover {
    8. Hide maps mode
    ========================================================= */
 
-body.hide-maps {
-  --left-map-width: 0px;
-  --right-map-width: 0px;
+body.hide-maps .layout {
+  grid-template-columns: 0px var(--left-page-width) var(--right-page-width) 0px;
+}
+
+body.hide-maps.single-view .layout {
+  grid-template-columns: 0px 1fr;
 }
 
 body.hide-maps .left-map,
@@ -1567,10 +1520,6 @@ body.single-view .right-map {
 /* =========================================================
    14. URL input environment mode
    ========================================================= */
-
-body.url-input-env #envSelectGroup {
-  grid-column: span 2;
-}
 
 body.url-input-env #yearSelectGroup {
   display: none;
